@@ -2,6 +2,7 @@ Koan CHANGELOG
 
 - Thu Sep 18 2008 Michael DeHaan <mdehaan@redhat.com> - 1.2.5-1
 - (BUGF) use file:/ks.cfg for --replace-self to make non-DHCP easier
+- (BUGF) for xenpv installations using --system, pay attention to --virt-bridge overrides
 
 - Wed Aug 29 2008 Michael DeHaan <mdehaan@redhat.com> - 1.2.0-1 
 - merge devel into stable
